last stage before refactoring

--- a/app/main.scss
+++ b/app/main.scss
@@ -198,7 +198,7 @@ h1 {
 
 .results {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     text-align: center;
     margin: 40px 0;
 }
