--- a/app/main.scss
+++ b/app/main.scss
@@ -95,6 +95,12 @@ h1 {
 
 .select__wrapper {
     margin: 10px auto;
+    font-family: $secondaryFont;
+    font-size: 14px;
+    background: linear-gradient(90deg, rgba(239,0,255,1) 10%, rgb(0, 157, 255) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 
     label:not(:last-child) {
         margin-right: 7px;
@@ -143,7 +149,7 @@ h1 {
     margin: 0 auto;
     background: #fff;
     border-radius: 15px;
-    animation: timer 300s linear forwards;
+    // animation: timer 300s linear forwards;
     overflow-x: hidden;
     position: relative;
 }
